rename images dir

--- a/clinica.html
+++ b/clinica.html
@@ -60,7 +60,7 @@
         
         <div class="site-logo">
         <a href="#">
-        <img src="Images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
+        <img src="images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
         </a>
         </div>
         
@@ -143,19 +143,19 @@
     <section class="ca-hero-slider position-relative overflow-hidden">
         <div class="ca-slider">
             <div class="ca-slide">
-                <img src="Images/helo_slider_img1.jpg" alt="helo_slider_img1">
+                <img src="images/helo_slider_img1.jpg" alt="helo_slider_img1">
             </div>
 
             <div class="ca-slide">
-                <img src="Images/helo_slider_img2.jpg" alt="helo_slider_img2">
+                <img src="images/helo_slider_img2.jpg" alt="helo_slider_img2">
             </div>
 
             <div class="ca-slide">
-                <img src="Images/helo_slider_img3.jpg" alt="helo_slider_img3">
+                <img src="images/helo_slider_img3.jpg" alt="helo_slider_img3">
             </div>
 
             <div class="ca-slide">
-                <img src="Images/helo_slider_img4.jpg" alt="helo_slider_img4">
+                <img src="images/helo_slider_img4.jpg" alt="helo_slider_img4">
             </div>
         </div>
     </section>
