--- a/endodoncia.html
+++ b/endodoncia.html
@@ -61,7 +61,7 @@
         
         <div class="site-logo">
         <a href="#">
-        <img src="Images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
+        <img src="images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
         </a>
         </div>
         
@@ -148,8 +148,8 @@
                     <div class="col-lg-9 col-md-8 col-sm-12">
                         <div class="blog_post_banner">
                             <div class="blog_post_banner_block">
-                                <a class="blog_post_img d-block" href="Images/endodoncia_banner.jpg">
-                                    <img src="Images/endodoncia_banner.jpg" alt="Odontologia Blog Image">
+                                <a class="blog_post_img d-block" href="images/endodoncia_banner.jpg">
+                                    <img src="images/endodoncia_banner.jpg" alt="Odontologia Blog Image">
                                 </a>
                             </div>
                         </div>
@@ -167,7 +167,7 @@
                                     <p style="text-align: justify;">En ocasiones, si la caries evoluciona muy lentamente puede llegar a estados muy avanzados, con gran afectación pulpar, sin que haya existido nunca dolor.</p>
                                     <p style="text-align: justify;"><strong><u>Tratamiento de la caries</u></strong></p>
                                     <p style="text-align: justify;">Depende de la fase de evolución en la que se encuentre.</p>
-                                    <p style="text-align: justify;"><img class="alignleft wp-image-435 " src="Images/endodoncia_inner_img.jpg" alt="endodoncia en Pamplona" width="300" height="282">Las caries superficiales que no han afectado a nervio se tratan por medio de obturaciones (empastes).</p>
+                                    <p style="text-align: justify;"><img class="alignleft wp-image-435 " src="images/endodoncia_inner_img.jpg" alt="endodoncia en Pamplona" width="300" height="282">Las caries superficiales que no han afectado a nervio se tratan por medio de obturaciones (empastes).</p>
                                     <p style="text-align: justify;">Las caries profundas con afectación del nervio se tratan con endodoncias, en las que se saca el nervio del diente, limpiando bien todo el tejido afectado en su interior.</p>
                                     <p style="text-align: justify;">Sólo en los casos en los que no es posible realizar una endodoncia se practica la extracción dentaria.</p>
                                     <p style="text-align: justify;"><strong><u>En qué consiste una obturación o empaste</u></strong></p>
