--- a/implantologia.html
+++ b/implantologia.html
@@ -61,7 +61,7 @@
         
         <div class="site-logo">
         <a href="#">
-        <img src="Images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
+        <img src="images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
         </a>
         </div>
         
@@ -148,8 +148,8 @@
                     <div class="col-lg-9 col-md-8 col-sm-12">
                         <div class="blog_post_banner">
                             <div class="blog_post_banner_block">
-                                <a class="blog_post_img d-block" href="Images/implantologia_banner.jpg">
-                                    <img src="Images/implantologia_banner.jpg" alt="Odontologia Blog Image">
+                                <a class="blog_post_img d-block" href="images/implantologia_banner.jpg">
+                                    <img src="images/implantologia_banner.jpg" alt="Odontologia Blog Image">
                                 </a>
                             </div>
                         </div>
@@ -172,7 +172,7 @@
                                     <li>Cirugía preprotésica: incluye todos los procedimientos encaminados a acomodar los tejidos óseos y mucosos de la cavidad oral a la prótesis (tanto muco o dentosoportadas como aquellas sobre implantes) tratamiento de frenillos labiales y linguales, epulis, fibromas mucosos, remodelado del reborde óseo…</li>
                                     </ul>
                                     <p style="text-align: justify;"><em>Implantología y reconstrucción ósea y de tejidos blandos.</em></p>
-                                    <p><a href="Images/implantologia_inner_img.jpg" class="d-block"><img class="wp-image-1050 size-medium alignleft" src="Images/implantologia_inner_img.jpg" alt="35280970 - close up of a dental implant model. selective focus." width="300" height="300"></a></p>
+                                    <p><a href="images/implantologia_inner_img.jpg" class="d-block"><img class="wp-image-1050 size-medium alignleft" src="images/implantologia_inner_img.jpg" alt="35280970 - close up of a dental implant model. selective focus." width="300" height="300"></a></p>
                                     <p style="text-align: justify;">Los implantes dentales osteointegrados son la <strong>mejor solución actualmente a la pérdida de dientes.</strong></p>
                                     <p style="text-align: justify;">Diferentes causas son las responsables de la falta de dientes: fracturas, caries, traumatismos, enfermedad periodontal.</p>
                                     <p style="text-align: justify;">Los implantes dentales son estructuras similares a un tornillo de titanio, material biocompatible&nbsp; con el cuerpo humano, que se insertan en la mandíbula o el maxilar y que funcionan como la raiz del diente. Una vez pasado un tiempo desde su inserción (es el periodo de osteointegración, en el que el hueso y el implante forman una unión rígida y estable) los implantes se pueden conectar a la estructura protésica, la corona, pieza con forma de diente o muela con la que efectuará la masticación.</p>
