--- a/ortodoncia.html
+++ b/ortodoncia.html
@@ -61,7 +61,7 @@
         
         <div class="site-logo">
         <a href="#">
-        <img src="Images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
+        <img src="images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
         </a>
         </div>
         
@@ -148,15 +148,15 @@
                     <div class="col-lg-9 col-md-8 col-sm-12">
                         <div class="blog_post_banner">
                             <div class="blog_post_banner_block">
-                                <a class="blog_post_img d-block" href="Images/ortodoncia_banner.jpg">
-                                    <img src="Images/ortodoncia_banner.jpg" alt="Odontologia Blog Image">
+                                <a class="blog_post_img d-block" href="images/ortodoncia_banner.jpg">
+                                    <img src="images/ortodoncia_banner.jpg" alt="Odontologia Blog Image">
                                 </a>
                             </div>
                         </div>
                         <div class="blog_post_content_block">
                             <div class="blog_page_content">
                                 <div class="blog_page_entry-content">
-                                    <p style="text-align: justify;"><a href="Images/ortodoncia_inner_img.jpg" class="d-block"><img class="alignleft wp-image-1051 size-medium" src="Images/ortodoncia_inner_img.jpg" alt="40351510_s" width="300" height="207"></a>La <strong>Ortodoncia </strong>es la especialidad odontológica que se encarga de enderezar los dientes y alinear los huesos que los soportan. En la clínica <strong>Aparicio-Aréjula </strong>abordamos tratamientos tanto en niños como en adultos.Siempre hacemos una primera visita diagnóstica para evaluar y valorar tu caso.Trabajamos desde la perspectiva de la prevención y mejora de la salud bucodental.</p>
+                                    <p style="text-align: justify;"><a href="images/ortodoncia_inner_img.jpg" class="d-block"><img class="alignleft wp-image-1051 size-medium" src="images/ortodoncia_inner_img.jpg" alt="40351510_s" width="300" height="207"></a>La <strong>Ortodoncia </strong>es la especialidad odontológica que se encarga de enderezar los dientes y alinear los huesos que los soportan. En la clínica <strong>Aparicio-Aréjula </strong>abordamos tratamientos tanto en niños como en adultos.Siempre hacemos una primera visita diagnóstica para evaluar y valorar tu caso.Trabajamos desde la perspectiva de la prevención y mejora de la salud bucodental.</p>
                                     <p style="text-align: justify;">
                                     </p><p style="text-align: justify;">
                                     </p><p style="text-align: justify;"><strong>ORTODONCIA INFANTIL </strong></p>
