--- a/periodoncia.html
+++ b/periodoncia.html
@@ -61,7 +61,7 @@
         
         <div class="site-logo">
         <a href="#">
-        <img src="Images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
+        <img src="images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
         </a>
         </div>
         
@@ -148,8 +148,8 @@
                     <div class="col-lg-9 col-md-8 col-sm-12">
                         <div class="blog_post_banner">
                             <div class="blog_post_banner_block">
-                                <a class="blog_post_img d-block" href="Images/periodoncia_banner.jpg">
-                                    <img src="Images/periodoncia_banner.jpg" alt="Odontologia Blog Image">
+                                <a class="blog_post_img d-block" href="images/periodoncia_banner.jpg">
+                                    <img src="images/periodoncia_banner.jpg" alt="Odontologia Blog Image">
                                 </a>
                             </div>
                         </div>
