--- a/protesis-dental.html
+++ b/protesis-dental.html
@@ -61,7 +61,7 @@
         
         <div class="site-logo">
         <a href="#">
-        <img src="Images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
+        <img src="images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
         </a>
         </div>
         
@@ -148,8 +148,8 @@
                     <div class="col-lg-9 col-md-8 col-sm-12">
                         <div class="blog_post_banner">
                             <div class="blog_post_banner_block">
-                                <a class="blog_post_img d-block" href="Images/protesis-dental_banner.jpg">
-                                    <img src="Images/protesis-dental_banner.jpg" alt="Odontologia Blog Image">
+                                <a class="blog_post_img d-block" href="images/protesis-dental_banner.jpg">
+                                    <img src="images/protesis-dental_banner.jpg" alt="Odontologia Blog Image">
                                 </a>
                             </div>
                         </div>
@@ -187,7 +187,7 @@
                                     <p style="text-align: justify;"><strong>&nbsp;</strong>La reposición de las piezas dentarías puede hacerse mediante dos tipos de prótesis:</p>
                                     <p style="text-align: justify;">
                                     </p><p style="text-align: justify;"><strong>Prótesis fija</strong></p>
-                                    <p style="text-align: justify;"><strong>&nbsp;<a href="Images/protesis-dental_inner_img1.jpg" class="d-block"><img class="size-full wp-image-1047 alignleft" src="Images/protesis-dental_inner_img1.jpg" alt="32603589 - dental ceramic bridge on isolated white" width="450" height="260"></a></strong>Es aquella que no puede ser retirada de la boca por el paciente.</p>
+                                    <p style="text-align: justify;"><strong>&nbsp;<a href="images/protesis-dental_inner_img1.jpg" class="d-block"><img class="size-full wp-image-1047 alignleft" src="images/protesis-dental_inner_img1.jpg" alt="32603589 - dental ceramic bridge on isolated white" width="450" height="260"></a></strong>Es aquella que no puede ser retirada de la boca por el paciente.</p>
                                     <p style="text-align: justify;">Para realizar una prótesis fija es necesario que existan unos pilares donde apoyar la prótesis. Estos pilares podrán ser piezas que todavía quedan en la boca, o&nbsp; los implantes.</p>
                                     <p style="text-align: justify;">Para realizar una prótesis fija apoyada sobre los dientes que quedan en boca, es preciso reducir el tamaño de éstos para apoyar sobre ellos las fundas que irán cementadas.</p>
                                     <p style="text-align: justify;">Este tipo de prótesis se apoya sobre dos o más pilares, ya que con la masticación van a soportar grandes fuerzas que harían fracasar el puente si no consta de buen sistema de soporte.</p>
@@ -201,9 +201,9 @@
                                     <p style="text-align: justify;">
                                     </p><p style="text-align: justify;">Con estructura metálica</p>
                                     <p style="text-align: justify;"><strong></strong></p>
-                                    <p><a href="Images/protesis-dental_inner_img2.jpg"><img class="wp-image-1048 size-medium" src="Images/protesis-dental_inner_img2.jpg" alt="46802056 - false teeth placed on white background." width="300" height="235"></a></p>
+                                    <p><a href="images/protesis-dental_inner_img2.jpg"><img class="wp-image-1048 size-medium" src="images/protesis-dental_inner_img2.jpg" alt="46802056 - false teeth placed on white background." width="300" height="235"></a></p>
                                     <p style="text-align: justify;">Con resinas</p>
-                                    <p><a href="Images/protesis-dental_inner_img3.jpg"><img class="wp-image-1049 size-medium" src="Images/protesis-dental_inner_img3.jpg" alt="52682668 - full denture on white background" width="300" height="200"></a></p>
+                                    <p><a href="images/protesis-dental_inner_img3.jpg"><img class="wp-image-1049 size-medium" src="images/protesis-dental_inner_img3.jpg" alt="52682668 - full denture on white background" width="300" height="200"></a></p>
                                     <p style="text-align: justify;">En ambos casos se pueden restaurar la estética y funciones de la boca,&nbsp;pero el período de adaptación del paciente a la prótesis removiste es mayor que a la prótesis fija.</p>
                                 </div>
                             </div>
