--- a/servicios.html
+++ b/servicios.html
@@ -61,7 +61,7 @@
         
         <div class="site-logo">
         <a href="#">
-        <img src="Images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
+        <img src="images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
         </a>
         </div>
         
@@ -259,7 +259,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 our_services_block">
                         <article class="two-col-service our_services_items">
                             <figure>
-                                <a href="Images/our_services7.jpg">
+                                <a href="images/our_services7.jpg">
                                     <img src="images/our_services7.jpg" class="our_services_img" alt="Service Image 7">
                                 </a>
                             </figure>
@@ -277,7 +277,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-6 our_services_block">
                         <article class="two-col-service our_services_items">
                             <figure>
-                                <a href="Images/our_services8.jpg">
+                                <a href="images/our_services8.jpg">
                                     <img src="images/our_services8.jpg" class="our_services_img" alt="Service Image 8">
                                 </a>
                             </figure>
