--- a/dr-auri-juarez-espinoza.html
+++ b/dr-auri-juarez-espinoza.html
@@ -61,7 +61,7 @@
         
         <div class="site-logo">
         <a href="#">
-        <img src="Images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
+        <img src="images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
         </a>
         </div>
         
