--- a/faqs.html
+++ b/faqs.html
@@ -61,7 +61,7 @@
         
         <div class="site-logo">
         <a href="#">
-        <img src="Images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
+        <img src="images/headre_logo.png" alt="Logo" class="img-fluid" style="max-height:70px;">
         </a>
         </div>
         
@@ -171,8 +171,8 @@
                             <!-- TOP IMAGE -->
                             <div class="col-lg-12 faq_page_banner">
                                 <div class="faq-top-img">
-                                    <a class="faq_img" href="Images/faq_page_banner.jpg">
-                                        <img src="Images/faq_page_banner.jpg" class="w-100" alt="FAQ Banner">
+                                    <a class="faq_img" href="images/faq_page_banner.jpg">
+                                        <img src="images/faq_page_banner.jpg" class="w-100" alt="FAQ Banner">
                                     </a>
                                 </div>
                             </div>
